Setting up LOGIN/LOGOUT

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,11 @@
 button {
   cursor: pointer;
 }
+.auth {
+  color: green;
+  font-weight: bold;
+}
+.not-auth {
+  color: red;
+  font-weight: bold;
+}
