--- a/src/index.css
+++ b/src/index.css
@@ -19,3 +19,10 @@ button {
   color: red;
   font-weight: bold;
 }
+.card {
+  margin-top: 20px;
+  border: 2px solid #ccc;
+  border-radius: 10px;
+  padding: 10px;
+  font-size: 28px;
+}
